<resources>
    <string name="app_name">P4_7s21</string>
    <string name="p1titulo">Manejo de actividades (Layout)</string>
    <string name="p1actbasc">Actividad Basica</string>
    <string name="p1actparce">Actividad Parceable</string>
    <string name="p1actresp">Actividad Resultado</string>
    <string name="p1ingnombre">Ingresa aqui tu nombre</string>
    <string name="p1ingedad">Ingresa aqui tu edad</string>
    <string name="p1ingcorreo">Ingresa aqui tu correo</string>
    <string name="p2titulo">Actividad Basica</string>
    <string name="p2mensaje">Nombre recibido</string>
    <string name="p2btnreg">Regresar a la actividad principal</string>
    <string name="p3titulo">Elementos parcelables datos</string>
    <string name="p3informacion">Datos obtenidos</string>
    <string name="p3btnregresa">Regresar al home</string>

</resources>