<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PrincipalActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="314dp"
        android:layout_height="83dp"
        android:layout_marginTop="92dp"
        android:gravity="center|center_horizontal"
        android:text="@string/p1titulo"
        android:textColor="@color/panfilo"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />

    <Button
        android:id="@+id/p1btnab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center|center_horizontal"
        android:onClick="presionaBoton"
        android:text="@string/p1actbasc"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/p1btnap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:gravity="center|center_horizontal"
        android:onClick="presionaBoton"
        android:text="@string/p1actparce"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/p1btnab"
        app:layout_constraintHorizontal_bias="0.543"
        app:layout_constraintStart_toStartOf="@+id/p1btnab"
        app:layout_constraintTop_toBottomOf="@+id/p1btnab" />

    <Button
        android:id="@+id/p1btnar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:onClick="presionaBoton"
        android:text="@string/p1actresp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/p1btnap"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/p1btnap"
        app:layout_constraintTop_toBottomOf="@+id/p1btnap" />

    <EditText
        android:id="@+id/p1txtnombre"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="24dp"
        android:autofillHints="nombre"
        android:ems="10"
        android:hint="@string/p1ingnombre"
        android:inputType="text"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.551"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/p1btnar"
        tools:ignore="VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/p1txtedad"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="30dp"
        android:autofillHints="edad"
        android:ems="10"
        android:hint="@string/p1ingedad"
        android:inputType="number"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/p1txtnombre"
        tools:ignore="VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/p1txtcorreo"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="30dp"
        android:autofillHints="correo"
        android:ems="10"
        android:hint="@string/p1ingcorreo"
        android:inputType="textEmailAddress"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/p1txtedad"
        tools:ignore="VisualLintTextFieldSize" />
</androidx.constraintlayout.widget.ConstraintLayout>